# rust-use-cpp-complex-library

./: .gitignore  CMakeLists.txt  README.md  build.rs  cargo.toml
include/: open3d_wrapper.h
src/: binds.rs  main.cpp  main.rs  open3d_wrapper.cc
